Update page content for instruments

--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -47,6 +47,7 @@
           />
         {% endif %}
       <section id="main_content" class="inner">
+        <a href="/">Home</a> > {{ page.title }}
         {{ content }}
       </section>
     </div>
