--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -47,7 +47,7 @@
           />
         {% endif %}
       <section id="main_content" class="inner">
-        <a href="/">Home</a> > {{ page.title }}
+        <a href="{{ '/' |  relative_url }}">Home</a> > {{ page.title }}
         {{ content }}
       </section>
     </div>
